--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prompt-for",
+  "name": "prompt-for-patched",
   "description": "Prompt the user for a series of answers.",
   "repository": "git://github.com/segmentio/prompt-for.git",
   "version": "1.1.2",
